// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VoiceBroadcastHeader when rendering a live broadcast header with broadcast info should render the header with a live badge 1`] = `
<div>
  <div
    class="mx_VoiceBroadcastHeader"
  >
    <div
      data-testid="room-avatar"
    >
      room avatar: 
      !room:example.com
    </div>
    <div
      class="mx_VoiceBroadcastHeader_content"
    >
      <div
        class="mx_VoiceBroadcastHeader_room"
      >
        !room:example.com
      </div>
      <div
        class="mx_VoiceBroadcastHeader_line"
      >
        <div
          class="mx_Icon mx_Icon_16"
        />
        <span>
          test user
        </span>
      </div>
      <div
        class="mx_VoiceBroadcastHeader_line"
      >
        <div
          class="mx_Icon mx_Icon_16"
        />
        Voice broadcast
      </div>
    </div>
    <div
      class="mx_LiveBadge"
    >
      <div
        class="mx_Icon mx_Icon_16"
      />
      Live
    </div>
  </div>
</div>
`;

exports[`VoiceBroadcastHeader when rendering a non-live broadcast header should render the header without a live badge 1`] = `
<div>
  <div
    class="mx_VoiceBroadcastHeader"
  >
    <div
      data-testid="room-avatar"
    >
      room avatar: 
      !room:example.com
    </div>
    <div
      class="mx_VoiceBroadcastHeader_content"
    >
      <div
        class="mx_VoiceBroadcastHeader_room"
      >
        !room:example.com
      </div>
      <div
        class="mx_VoiceBroadcastHeader_line"
      >
        <div
          class="mx_Icon mx_Icon_16"
        />
        <span>
          test user
        </span>
      </div>
    </div>
  </div>
</div>
`;
